samples/_failures_safe/1761346403_b57b2e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6342c31.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b6342c31.c:161:13: error: expected expression at end of input
  161 |             *column +=
      |             ^
./samples/SAFE/__tmp_b6342c31.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6342c31.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6342c31.c:161:13: error: expected declaration or statement at end of input
